<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/iv_logo_game_over"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/game_over"
        app:layout_constraintBottom_toTopOf="@+id/tv_min_percent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/victory" />

    <TextView
        android:id="@+id/tv_min_percent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_tv_game_over"
        android:text="@string/tl_corrected_answers"
        android:textSize="@dimen/text_size_game_over"
        app:layout_constraintBottom_toTopOf="@+id/tv_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_tv_game_over"
        android:text="@string/score"
        android:textSize="@dimen/text_size_game_over"
        app:layout_constraintBottom_toTopOf="@+id/tv_percent_corrected_answers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_min_percent" />


    <TextView
        android:id="@+id/tv_percent_corrected_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_tv_game_over"
        android:text="@string/min_percent"

        android:textSize="@dimen/text_size_game_over"
        app:layout_constraintBottom_toTopOf="@+id/tv_correct_answers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_score" />


    <TextView
        android:id="@+id/tv_correct_answers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_tv_game_over"
        android:text="@string/percent_corrected_answers"
        android:textSize="@dimen/text_size_game_over"
        app:layout_constraintBottom_toTopOf="@+id/bt_again_begin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_percent_corrected_answers" />

    <Button
        android:id="@+id/bt_again_begin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/again_begin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>